# op-gclient

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
ext/: CMakeLists.txt
src/: application.cpp  application.hpp  main.cpp
src/core/: communication_backend.cpp  communication_backend.hpp  connection_manager.cpp  connection_manager.hpp  gimbal_state.cpp  gimbal_state.hpp  network_connection.cpp  network_connection.hpp  network_transport.cpp  network_transport.hpp  packet_ack_manager.cpp  packet_ack_manager.hpp  packet_codec.cpp  packet_codec.hpp  packet_framer.cpp  packet_framer.hpp  serial_connection.cpp  serial_connection.hpp  serial_manager.hpp  serial_transport.cpp  serial_transport.hpp  stream_framer.cpp  stream_framer.hpp  transport_interface.hpp
src/platform/: serial_port_helper.hpp  serial_port_helper_linux.cpp  serial_port_helper_windows.cpp
src/rendering/: views.cpp  views.hpp
src/rendering/views/: default_view.cpp  default_view.hpp  gimbal_control_view.cpp  gimbal_control_view.hpp
src/util/: events.cpp  events.hpp  logging.cpp  logging.hpp  window_handler.cpp  window_handler.hpp
